syntax = "proto3";
package AuthPackage;

message Register {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string phone = 4;
    string password = 5;
}
message Login {
    string phone = 1;
    string password = 2;
}
message LoginResult {
    string accessToken = 1;
    string refreshToken = 2;
}
message RegisterResult = {
    string message = 1;
}
message ResetPassword { 
    string phone = 1;
}
